# rticonnextdds-gateway

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
doc/: CMakeLists.txt  building.rst  conf.py  copyright.rst  folder_organization.rst  index.rst  installation.rst  introduction.rst  vars.rst
doc/_static/csv/: plugin_file_organization.csv
examples/json/json_shapes/: CMakeLists.txt  README.md  RsJsonShapes.xml  json_to_shapes_transf.xml  shapes_to_json_transf.xml
examples/modbus/MBus_WTH_CO2_LCD_ETH/: CMakeLists.txt  MBus_WTH_CO2_LCD_ETH_input_config.json  MBus_WTH_CO2_LCD_ETH_output_config.json  README.md  RSConfigAdapter.xml  USER_QOS_PROFILES.xml
examples/modbus/MBus_WTH_CO2_LCD_ETH/dds_reader/: CMakeLists.txt  MBus_WTH_CO2_LCD_ETH_INPUT_subscriber.c  USER_QOS_PROFILES.xml
examples/modbus/MBus_WTH_CO2_LCD_ETH/dds_writer/: CMakeLists.txt  MBus_WTH_CO2_LCD_ETH_WRITE_publisher.c  USER_QOS_PROFILES.xml
examples/modbus/MBus_WTH_CO2_LCD_ETH/idl/: MBus_WTH_CO2_LCD_ETH_INPUT.idl  MBus_WTH_CO2_LCD_ETH_WRITE.idl
examples/modbus/modbus_gateway_serial/: CMakeLists.txt  README.md  RSConfigAdapter.xml  USER_QOS_PROFILES.xml  modbus_serial_device_config.json  temperature_correction_config.json
examples/modbus/modbus_gateway_serial/dds_reader/: CMakeLists.txt  modbus_serial_device_subscriber.c
examples/modbus/modbus_gateway_serial/dds_writer/: CMakeLists.txt  temperature_correction_publisher.c
examples/modbus/modbus_gateway_serial/idl/: modbus_serial_device.idl  temperature_correction.idl
examples/mqtt/: CMakeLists.txt
examples/mqtt/mqtt-agent/: CMakeLists.txt
examples/mqtt/mqtt-agent/etc/: mqtt_agent_profiles.xml  mqtt_data_bridge.xml
examples/mqtt/mqtt-agent/srcC/: MqttAgent.c  MqttAgent.h  MqttAgentPublisher.c  MqttAgentSubscriber.c  main.c
examples/mqtt/mqtt-shapes/: .gitignore  CMakeLists.txt  README.md
examples/mqtt/mqtt-shapes/etc/: shapes_agent_profiles.xml  shapes_bridge.xml  shapes_bridge_arduino.xml  shapes_bridge_cloud.xml  shapes_bridge_full.xml  shapes_bridge_map.xml  shapes_demo_workspace.xml
examples/mqtt/mqtt-shapes/idl/: ShapeType.idl
examples/mqtt/mqtt-shapes/scripts/: shapes_mqtt_publisher.bat  shapes_mqtt_publisher.sh  shapes_mqtt_subscriber.bat  shapes_mqtt_subscriber.sh  tmux_session.sh  windows_run_all.bat
examples/mqtt/mqtt-shapes/srcC/: ShapesAgentDds.c  ShapesAgentDds.h  ShapesAgentDdsPublisher.c  ShapesAgentDdsSubscriber.c  main.c  termcolor.h
plugins/adapters/kafka/: CMakeLists.txt
plugins/adapters/kafka/doc/: CMakeLists.txt  additional_resources.rst  conf.py  configuration.rst  index.rst  introduction.rst  release_notes.rst  vars.rst
plugins/adapters/kafka/srcC/: KafkaAdapter.c  KafkaAdapter.h  KafkaConnection.c  KafkaConnection.h  KafkaStreamReader.c  KafkaStreamReader.h  KafkaStreamWriter.c  KafkaStreamWriter.h
plugins/adapters/modbus/: CMakeLists.txt
plugins/adapters/modbus/doc/: CMakeLists.txt  additional_resources.rst  conf.py  configuration.rst  index.rst  introduction.rst  release_notes.rst  vars.rst
plugins/adapters/modbus/srcCxx/: LibModbusClient.cxx  LibModbusClient.hpp  ModbusAdapter.cxx  ModbusAdapter.hpp  ModbusAdapterConfiguration.cxx  ModbusAdapterConfiguration.hpp  ModbusClient.hpp  ModbusConnection.cxx  ModbusConnection.hpp  ModbusStreamReader.cxx  ModbusStreamReader.hpp  ModbusStreamWriter.cxx  ModbusStreamWriter.hpp
plugins/adapters/modbus/test/: CMakeLists.txt
plugins/adapters/modbus/utilities/: CMakeLists.txt  modbus_server.c
plugins/adapters/mqtt/: .gitignore  CMakeLists.txt  README.md
plugins/adapters/mqtt/doc/: .gitignore  CMakeLists.txt  Doxyfile  additional_resources.rst  conf.py  configuration.rst  index.rst  introduction.rst  modules.rst  release_notes.rst  vars.rst
plugins/adapters/mqtt/idl/: rtiadapt_mqtt_types.idl  rtiadapt_mqtt_types_adapter.idl  rtiadapt_mqtt_types_client.idl  rtiadapt_mqtt_types_message.idl
plugins/processors/fwd/: CMakeLists.txt
plugins/processors/fwd/doc/: CMakeLists.txt  additional_resources.rst  conf.py  configuration.rst  copyright.rst  index.rst  introduction.rst  release_notes.rst  vars.rst
plugins/processors/fwd/idl/: rtiprocess_fwd_types.idl
plugins/processors/fwd/srcCxx/: ByInputNameForwardingEngine.cxx  ByInputValueForwardingEngine.cxx  ForwardingEngine.cxx  Properties.cxx
plugins/processors/pyprocessor/: .gitignore  CMakeLists.txt  README.rst
plugins/processors/pyprocessor/doc/: CMakeLists.txt  additional_resources.rst  api.rst  concept.rst  conf.py  configuration.rst  copyright.rst  index.rst  introduction.rst  modules.rst  release_notes.rst  vars.rst
plugins/processors/pyprocessor/src/: NativeUtils.cxx  NativeUtils.hpp  PyDynamicData.cxx  PyDynamicData.hpp  PyInput.cxx  PyInput.hpp  PyOutput.cxx  PyOutput.hpp  PyProcessor.cxx  PyProcessor.hpp  PyRoute.cxx  PyRoute.hpp  PySamples.cxx  PySamples.hpp  PyService.cxx  PyService.hpp  PyServiceGlobals.cxx  PyServiceGlobals.hpp
plugins/processors/pyprocessor/srcCxx/: NativeUtils.cxx  NativeUtils.hpp  PyDynamicData.cxx  PyDynamicData.hpp  PyInput.cxx  PyInput.hpp  PyOutput.cxx  PyOutput.hpp  PyProcessor.cxx  PyProcessor.hpp  PyRoute.cxx  PyRoute.hpp  PySamples.cxx  PySamples.hpp  PyService.cxx  PyService.hpp  PyServiceGlobals.cxx  PyServiceGlobals.hpp
plugins/processors/pyprocessor/test/: RsPyTest.xml  pyproctest.py
plugins/transformations/field/: CMakeLists.txt  README.md
plugins/transformations/field/doc/: CMakeLists.txt  additional_resources.rst  conf.py  configuration.rst  introduction.rst  release_notes.rst  vars.rst
plugins/transformations/field/srcC/: FieldInfrastructure.c  FieldInfrastructure.h  PrimitiveFieldTransformation.c
plugins/transformations/json/: .gitignore  CMakeLists.txt  README.md
plugins/transformations/json/doc/: CMakeLists.txt  additional_resources.rst  conf.py  configuration.rst  extlinks.py  introduction.rst  release_notes.rst  vars.rst
plugins/transformations/json/srcC/: FlatTypeInfrastructure.h  FlatTypeTransformation.c  JsonTransformation.c  (+1 more)
plugins/transformations/sequence2array/: CMakeLists.txt  README.md
(+193 files in other folders)
